force-app/main/default/objects/Account/fields/RenewalDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalDate__c</fullName>
    <label>RenewalDate</label>
    <type>Date</type>
</CustomField>