force-app/main/default/objects/Account/fields/SupportSlaStatus__c.field-meta.xml
<CustomField>
    <fullName>SupportSlaStatus__c</fullName>
    <label>SupportSlaStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breached</fullName>
            </value>
            <value>
                <fullName>At-Risk</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>